--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -24,6 +26,7 @@
     "reactflow": "^11.8.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.3",
     "vite": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
